# Bark_qBittorrent_Notify

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  bark_notify.c  bark_notify.service  bark_notify_simp.ini
